test/earlyReturn7.slq

def main(){
	x:=H(0:𝔹);
	if x{
		return 1:!ℕ; /// error
	}
	measure(x); /// error
	return 0;
	/+x:=measure(x);
	return x;+/
}
